cleaning up some things